<resources>
    <string name="app_name">Aventuras</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="t_tulo_de_la_aventura">Título de la Aventura</string>
    <string name="autor">Autor</string>
    <string name="titulo_aventura_hint">Aquí el título de la aventura</string>
    <string name="aventuras_name">Aventuras</string>
    <string name="add_adv">Crear Aventura</string>
    <string name="sinnombre">Sin Nombre</string>
    <string name="sinautor">Sin Autor</string>
    <string name="eror_usuario">Fallo al crear usuario</string>
    <string name="max_aventuras">Como máximo puedes publicar 10 historias. Borra alguna de la Web si quieres publicar esta</string>
    <string name="max_adv_app">Se ha llegado al máximo de aventuras que puede tener esta APP, haz una donación para aumentar la capacidad de nuestro servidor</string>
    <string name="max_caps">Como máximo puedes crear 30 capitulos, no puedes crear mas</string>
    <string name="delete_chapt">¿Borrar capítulo? ¡OJO! Se borrarán también todos los capitulos que dependan de éste y no se puede deshacer</string>
    <string name="no_del_chapt">No se puede borrar el primer capítulo</string>
    <string name="almost_one_word">Debes introducir al menos una palabra</string>
    <string name="select_decision">Pulsa para elegir lo que pasa</string>
    <string name="no_permission">Permiso denegado</string>
    <string name="flag_button_to_exit">Pulsa en el botón de la bandera para salir</string>
    <string name="borrar_confirmar">¿Seguro que quieres borrar?</string>
    <string name="editar_adv">Editar Aventura</string>
    <string name="jugar">Jugar</string>
    <string name="no_edit_web_adv">No es posible editar una Aventura de la Web, puedes borrarla y volver a subirla desde tus Aventuras</string>
    <string name="no_delete_adv_own">No puedes borrar una aventura que no has creado tu.</string>
    <string name="pendiente_apro">Aventura pendiente de aprobación, próximamente podrás jugar!</string>
    <string name="escribe_aqu_tu_historia">Escribe aquí tu historia</string>
    <string name="decide">Decide que haces</string>
    <string name="seguro">¿Seguro?</string>
    <string name="votar">Por favor, vota esta historia:</string>
    <string name="fin_adv">¡Esta historia acaba aquí. Vuelve a intentarlo!</string>
    <string name="empezar_de_nuevo">Empezar de nuevo</string>
    <string name="salir">Salir</string>
    <string name="publicar_msg">La historia deberá ser aprobada, puede tardar algo de tiempo, y si cumple las normas, otros usuarios de \'Aventuras\' podrán jugar y ver tu historia!!!</string>
    <string name="publicar">Publicar</string>
    <string name="votar_btn">Votar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="decision_1">Decision 1</string>
    <string name="decision_2">Decision 2</string>
    <string name="filtrar">Introduce el título o autor que quieras encontrar:</string>
    <string name="no_publi">Solo ver los no publicados</string>
    <string name="aventura">Aventura</string>
    <string name="creador">Creador</string>
    <string name="visitas">Visitas</string>
    <string name="nota">Nota</string>
    <string name="decision">Introduce decisión</string>
    <string name="tusaventuras">Tus Aventuras</string>
    <string name="aventurasweb">Aventuras Web</string>
    <string name="default_notification_channel_id">notificationChannelID</string>
    <string name="default_notification_channel_name">notificacion</string>
    <string name="msg_subscribed">Suscrito a Aventuras</string>
    <string name="msg_subscribe_failed">error al suscribirse a Aventuras</string>
    <string name="msg_token_fmt">token_notificaciones</string>
    <string name="nueva_av">Nueva Aventura publicada!! </string>
</resources>
