<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/titulo2_img_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/nombre_app" />


    <TextView
        android:id="@+id/texto_dialog_confirmarTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/schoolbell"
        android:gravity="center"
        android:text="@string/seguro"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelar_confirmar_dialog_BTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/schoolbell"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/aceptar_confirmar_dialog_BTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/schoolbell"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/aceptar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="5dp"
        android:background="@android:color/black"
        android:orientation="horizontal"></LinearLayout>


</LinearLayout>