<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fondo_item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemAventura"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@font/schoolbell"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/aventura"
            android:textColor="@color/azul_oscuro"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/itemCreador"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@font/schoolbell"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/creador"
            android:textColor="@color/azul_oscuro"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/itemVisitas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/schoolbell"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/visitas"
            android:textColor="@color/azul_oscuro"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/itemNota"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/schoolbell"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/nota"
            android:textColor="@color/azul_oscuro"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/celeste"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>