<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/titulo_img_header_filtrar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/brujula" />

    <TextView
        android:id="@+id/titulo_filtrarTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Introduce el título o autor que quieras encontrar:"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nombreAventuraDLG_filtrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/titulo_aventura_hint"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/AutorDLG_filtrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/autor"
        android:inputType="textNoSuggestions" />

    <CheckBox
        android:id="@+id/publicadosCHKBX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Solo ver los no publicados" />

    <Button
        android:id="@+id/aceptarBTN_filtrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="Aceptar" />

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="5dp"
        android:background="@android:color/black"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>