<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/titulo_img_header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/brujula" />

    <TextView
        android:id="@+id/tituloDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Texto Dialogo"
        android:textSize = "18sp"
        android:textColor = "#F44336"
        android:layout_gravity = "center"
        />

    <EditText
        android:id="@+id/nombreAventuraDLG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/titulo_aventura_hint"
        android:inputType="textNoSuggestions"
        android:maxLength="30" />

    <EditText
        android:id="@+id/AutorDLG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/autor"
        android:inputType="textNoSuggestions"
        android:maxLength="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancelarCrearBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="Cancelar" />

        <Button
            android:id="@+id/empezarCrearBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="Aceptar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="5dp"
        android:background="@android:color/black"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>
